--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,65 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+	font-size: var(--text-3xl);
+	line-height: var(--tw-leading, var(--text-3xl--line-height));
+	font-weight: bolder;
+}
+
+h2 {
+	font-size: var(--text-2xl);
+	line-height: var(--tw-leading, var(--text-2xl--line-height));
+	margin-top: calc(var(--spacing) * 6);
+	font-weight: bold;
+}
+
+h3 {
+	font-size: var(--text-xl);
+	line-height: var(--tw-leading, var(--text-xl--line-height));
+	margin-top: calc(var(--spacing) * 4);
+	font-weight: bold;
+}
+
+ul {
+	list-style-type: disc;
+	padding-left: calc(var(--spacing) * 5);
+	margin-top: calc(var(--spacing) * 2);
+	margin-bottom: calc(var(--spacing) * 4);
+}
+
+ol {
+	list-style-type: decimal;
+	padding-left: calc(var(--spacing) * 5);
+	margin-top: calc(var(--spacing) * 2);
+	margin-bottom: calc(var(--spacing) * 4);
+}
+
+li {
+	margin-top: calc(var(--spacing) * 1);
+	margin-bottom: calc(var(--spacing) * 1);
 }
